@@ -97,6 +97,7 @@
                             <left>-16</left>
                             <include>Object_StarRating</include>
                             <visible>String.IsEmpty(ListItem.UserRating)</visible>
+                            <visible>!Skin.HasSetting(DisableStarRating)</visible>
                         </control>
                         <control type="group">
                             <top>-17</top>
@@ -105,12 +106,14 @@
                                 <param name="rating_prop" value="ListItem.UserRating" />
                             </include>
                             <visible>!String.IsEmpty(ListItem.UserRating)</visible>
+                            <visible>!Skin.HasSetting(DisableStarRating)</visible>
                         </control>
                         <control type="group">
                             <top>24</top>
                             <left>256</left>
                             <width>$PARAM[width]</width>
-                            <include content="Object_Ratings" condition="Window.IsVisible(MyVideoNav.xml) | Window.IsVisible(Home.xml) | Window.IsVisible(script-globalsearch.xml)">
+                            <animation effect="slide" end="-256" condition="Skin.HasSetting(DisableStarRating)">Conditional</animation>
+                            <include content="Object_Ratings" condition="Window.IsVisible(MyVideoNav.xml) | Window.IsVisible(Home.xml) | Window.IsVisible(script-globalsearch.xml)">                            
                                 <param name="directory" value="color" />
                                 <param name="align" value="left" />
                                 <param name="width" value="$PARAM[width]" />
@@ -172,6 +175,7 @@
                 </control>
                 <control type="group">
                     <height>80</height>
+                    <visible>!Skin.HasSetting(DisableStarRating)</visible>
                     <control type="group">
                         <top>-17</top>
                         <left>-16</left>
