@@ -6,6 +6,7 @@ Change seekbar seeking to a white nib
 Fix widget gap bug
 Gradient option
 Light Opaque colour scheme
+Add star rating option to disable in Ratings options
 
 [B]0.9.15[/B]
 LEIA - Global Search 8 now skinned
